[tool.poetry]
name = "blackscholes"
version = "0.1.5"
description = "Black Scholes calculator for Python including all Greeks"
authors = ["CarloLepelaars <info@carlolepelaars.nl>"]
license = "MIT"
readme = ".github/README.MD"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
pytest = "^7.2.0"
black = "^22.10.0"
numpy = "^1.23.5"
scipy = "^1.9.3"
pytest-cov = "^4.1.0"
griffe = "^0.36.4"
mkdocstrings-python = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
